[metadata]
name = carbsimulator
version = 0.1.0
description = A simple library to help someone working in the food industry to calculate his C02 impact.
long_description = file: README.md
author = bingjian
author_email = bingjianjiang23@gmail.com

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.package_data]
* = vehicles.csv, Base_Carbone_V23.4.csv,energie.csv